# xor

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  stdout_writer.rs
