[package]
name = "xor"
description = "CLI app that implements basic XOR encryption/decryption"
keywords = ["XOR", "encryption", "decryption", "CLI", "terminal"]
categories = ["cryptography", "command-line-utilities"]
version = "1.0.0"
authors = ["gavyn <gavyn.riebau@gmail.com>"]
documentation = "https://github.com/gavynriebau/xor"
homepage = "https://github.com/gavynriebau/xor"
license = "MIT"

[dependencies]
clap = "2.21.1"
